--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,19 @@
 
 /* Resets */
-html, body {margin:0px; padding:0px; font-family:'Helvetica', 'Arial', sans-serif};
+* {margin:0px; padding:0px;}
+html, body {font-family:'Helvetica', 'Arial', sans-serif};
+div {box-sizing:border-box;}
+
+/* Container */
+.container {position:relative; max-width:640px; margin:0px auto; text-align:left;}
+
+/* Header */
+header {background:#f1f1f1;}
+header a {display:inline-block; margin-right:15px; padding:15px 0px;
+	color:inherit; text-decoration:none;}
+header a:hover {padding-bottom:12px; border-bottom:3px solid #ccc;}
+header a.active {padding-bottom:12px; border-bottom:3px solid #aaa;}
+header .logo {display:inline-block; margin-right:20px; font-weight:bold;}
+header .navigation {display:inline-block; margin-right:20px;}
+header .usermenu {display:inline-block; float:right; text-align:right;}
+header .usermenu a {margin-right:0px; margin-left:15px;}
