--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,28 +13,30 @@ div {box-sizing:border-box;}
 .row {margin-top:30px;}
 
 /* Container */
-.container {position:relative; max-width:640px; margin:0px auto; text-align:left;}
+.container {position:relative; max-width:640px; margin-left:auto; margin-right:auto; text-align:left;}
 
 /* COMPONENTS =============================================================== */
 
 /* Header */
 header {background:#f1f1f1;}
-header a {display:inline-block; margin-right:15px; padding:15px 0px;
+header a, header span {display:inline-block; margin-right:15px; padding:15px 0px;
 	color:inherit; text-decoration:none;}
+header a {cursor:pointer;}
 header a:hover {padding-bottom:12px; border-bottom:3px solid #ccc;}
 header a.active {padding-bottom:12px; border-bottom:3px solid #aaa;}
+header span {font-weight:bold;}
 header .logo {display:inline-block; margin-right:20px; font-weight:bold;}
 header .navigation {display:inline-block; margin-right:20px;}
-header .usermenu {display:inline-block; float:right; text-align:right;}
-header .usermenu a {margin-right:0px; margin-left:15px;}
+header .authmenu {display:inline-block; float:right; text-align:right;}
+header .authmenu a, header .authmenu span {margin-right:0px; margin-left:15px;}
 
 /* Form */
 form {}
 form .submit {border:0px; margin-top:20px;
-	background:#333; color:white; padding:4px 8px; font-size:16px;}
+	background:#333; color:white; padding:8px 16px; font-size:16px;}
 form .errorMessage {margin-top:20px; font-style:italic;}
 
 /* Field */
 .field {display:block; margin-top:20px; width:100%; max-width:320px;}
 .field span {display:block; font-size:16px; margin-bottom:6px;}
-.field input {width:100%; padding:4px 8px; font-size:16px;}
+.field input, .field textarea {width:100%; padding:8px 10px; font-size:16px;}
