--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
 html, body {font-family:'Helvetica', 'Arial', sans-serif};
 div {box-sizing:border-box;}
 img {max-width:100%;}
+a {color:inherit; text-decoration:none;}
 
 /* View */
 .view {padding-bottom:30px;}
@@ -44,7 +45,16 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .field .uploadedImage {height:120px;}
 .field span.instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
 
-.charityView img {max-height:220px;}
+/* Heading */
+.heading {padding:30px; background:#f9f9f9;}
+.heading .profileHeading {text-align:center;}
+.heading .profileHeading img {max-height:120px; border-radius:10px; margin-bottom:20px;}
+.heading .editLinks {text-align:center; margin-top:20px;}
+.heading .editLinks a {display:inline-block; margin:0px 10px;}
 
 /* Item */
-.item img {max-width:260px;}
+.item {display:block; border:1px solid #ccc; padding:10px;}
+.item img {display:inline-block; vertical-align:top; max-height:100px; margin-right:10px;}
+.item .info {display:inline-block; vertical-align:top; margin-top:20px; }
+.item .info h3 {line-height:40px;}
+.item .info p {line-height:20px; margin:0px;}
