--- a/src/css/main.css
+++ b/src/css/main.css
@@ -58,3 +58,7 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .item .info {display:inline-block; vertical-align:top; margin-top:20px; }
 .item .info h3 {line-height:40px;}
 .item .info p {line-height:20px; margin:0px;}
+
+button {
+	border:0px; background:#333; color:white; font-size:16px; align-self: left
+}
