--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,6 +43,7 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .field span {display:block; font-size:16px; margin-bottom:6px;}
 .field input, .field textarea {width:100%; padding:8px 10px; font-size:16px;}
 .field .uploadedImage {height:120px;}
+.field .imageThumbnail {display:inline-block; margin-top:15px; margin-right:15px; height:120px;}
 .field span.instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
 
 /* Heading */
