--- a/src/css/main.css
+++ b/src/css/main.css
@@ -68,9 +68,12 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .item.donation a {font-weight:bold;}
 .item.donation a:hover {color:blue}
 
-button {
-	border:0px; background:#333; color:white; font-size:12px; align-self: left
+.selectCategoryDiv {
+	display: inline;
 }
+button {
+	border:0px; margin-top:20px;
+	background:#333; color:white; padding:8px 16px; font-size:16px;}
 button:active {
 	transform: translateY(1px);
 }
