--- a/src/css/main.css
+++ b/src/css/main.css
@@ -41,11 +41,11 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 
 /* Field */
 .field {display:block; margin-top:20px; width:100%; max-width:320px;}
-.field span {display:block; font-size:16px; margin-bottom:6px;}
+.field .title, .instructions {display:block; font-size:16px; margin-bottom:6px;}
+.field .instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
 .field input, .field textarea {width:100%; padding:8px 10px; font-size:16px;}
 .field .uploadedImage {height:120px;}
 .field .imageThumbnail {display:inline-block; margin-top:15px; margin-right:15px; height:120px;}
-.field span.instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
 
 /* Heading */
 .heading {padding:30px; background:#f9f9f9;}
