--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,10 +40,13 @@ form .submit {border:0px; margin-top:20px;
 form .errorMessage {margin-top:20px; font-style:italic;}
 
 /* Field */
-.field {display:block; margin-top:20px; width:100%; max-width:320px;}
+.field {display:block; margin-top:20px; width:100%; max-width:360px;}
 .field .title, .instructions {display:block; font-size:16px; margin-bottom:6px;}
 .field .instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
-.field input, .field textarea {width:100%; padding:8px 10px; font-size:16px;}
+.field input, .field textarea {width:100%; padding:8px 10px; font-size:16px; line-height:18px; box-sizing:border-box;}
+.field.select input {margin-top:2px; padding:8px 0px;}
+.field.select .Select-control {border-radius:0px; height:38px;}
+.field.select .Select-placeholder {margin-top:2px;}
 .field .uploadedImage {height:120px;}
 .field .imageThumbnail {display:inline-block; margin-top:15px; margin-right:15px; height:120px;}
 
@@ -68,12 +71,10 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .item.donation a {font-weight:bold;}
 .item.donation a:hover {color:blue}
 
-.selectCategoryDiv {
-	display: inline;
-}
-button {
-	border:0px; margin-top:20px;
-	background:#333; color:white; padding:8px 16px; font-size:16px;}
-button:active {
-	transform: translateY(1px);
-}
+/* Search Form */
+.searchform {width:100%}
+.searchform .field {display:inline-block; width:48%; margin-right:3%; vertical-align:top;}
+.searchform .field.end {margin-right:0px;}
+
+button {border:0px; margin-top:20px; background:#333; color:white; padding:8px 16px; font-size:16px;}
+button:active {transform: translateY(1px);}
