--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 
 /* Resets */
 * {margin:0px; padding:0px;}
-html, body {font-family:'Helvetica', 'Arial', sans-serif};
+html, body {font-family:'Helvetica', 'Arial', sans-serif; height:100%; width:100%;}
 div {box-sizing:border-box;}
 img {max-width:100%;}
 a {color:inherit; text-decoration:none;}
@@ -22,6 +22,9 @@ a {color:inherit; text-decoration:none;}
 
 /* Header */
 header {background:#f1f1f1;}
+header #underlay {display:none;}
+header #control {display:inline-block;}
+header #open {display:none;}
 header a, header span {display:inline-block; margin-right:15px; padding:15px 0px;
 	color:inherit; text-decoration:none;}
 header a {cursor:pointer;}
@@ -78,3 +81,15 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 
 button {border:0px; margin-top:20px; background:#333; color:white; padding:8px 16px; font-size:16px;}
 button:active {transform: translateY(1px);}
+
+/* Mobile */
+@media screen and (max-width: 760px) {
+	.container {width:100%; padding:0px 20px;}
+	header #underlay {position:fixed; height:100%; width:100%; background:black; opacity:0.5; top:0px; left:0px;
+		display:none; z-index:50;}
+	header #control {position:fixed; height:100%; width:240px; left:0px; top:0px; display:none; background:white;
+		z-index:100;}
+	header #open {display:inline-block;}
+	header #control.show {display:block;}
+	header #underlay.show {display:block;}
+}
