--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,12 +21,12 @@ a {color:inherit; text-decoration:none;}
 /* COMPONENTS =============================================================== */
 
 /* Header */
-header {background:#f1f1f1;}
+header {background:#99badd;}
 header a, header span {display:inline-block; margin-right:15px; padding:15px 0px;
-	color:inherit; text-decoration:none;}
+	color:#fdfdfd; text-decoration:none;}
 header a {cursor:pointer;}
-header a:hover {padding-bottom:12px; border-bottom:3px solid #ccc;}
-header a.active {padding-bottom:12px; border-bottom:3px solid #aaa;}
+header a:hover {padding-bottom:12px; border-bottom:3px solid #4e88c2;}
+header a.active {padding-bottom:12px; border-bottom:3px solid #4e88c2;}
 header span {font-weight:bold;}
 header .logo {display:inline-block; margin-right:20px; font-weight:bold;}
 header .navigation {display:inline-block; margin-right:20px;}
