--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,11 +1,14 @@
 
 /* Resets */
 * {margin:0px; padding:0px;}
-html, body {font-family:'Helvetica', 'Arial', sans-serif; height:100%; width:100%;}
+html, body {font-family:'Roboto', 'Helvetica', 'Arial', sans-serif; height:100%; width:100%;}
 div {box-sizing:border-box;}
 img {max-width:100%;}
 a {color:inherit; text-decoration:none;}
 .clear {clear:both}
+
+/* Color Classes */
+.gray {background:#f4f4f4; padding-top:1px;}
 
 /* View */
 .view {padding-bottom:30px;}
@@ -21,17 +24,23 @@ a {color:inherit; text-decoration:none;}
 /* COMPONENTS =============================================================== */
 
 /* Header */
-header {background:#99badd;}
-header a, header span {display:inline-block; margin-right:15px; padding:15px 0px;
-	color:#fdfdfd; text-decoration:none;}
+header {position:fixed; width:100%; top:0px; left:0px; z-index:20;
+	background:#99badd; box-shadow:0px 0px 2px rgba(0,0,0,0.4);}
+header a, header span {display:inline-block; margin-right:15px; padding:12px 0px;
+	font-size:16px; line-height:20px; color:#fdfdfd; text-decoration:none;}
 header a {cursor:pointer;}
-header a:hover {padding-bottom:12px; border-bottom:3px solid #4e88c2;}
-header a.active {padding-bottom:12px; border-bottom:3px solid #4e88c2;}
+header a:hover {padding-bottom:9px; border-bottom:3px solid #4e88c2;}
+header a.active {padding-bottom:9px; border-bottom:3px solid #4e88c2;}
 header span {font-weight:bold;}
-header .logo {display:inline-block; margin-right:20px; font-weight:bold;}
+
 header .navigation {display:inline-block; margin-right:20px;}
 header .authmenu {display:inline-block; float:right; text-align:right;}
 header .authmenu a, header .authmenu span {display:inline-block; margin-right:0px; margin-left:15px;}
+
+header #logo {position:absolute; left:0px; top:0px;}
+header #logo a {font-size:18px; font-weight:bold;}
+header #control {display:block; margin-left:100px;}
+header #mobile {display:none;}
 
 /* Form */
 form {}
@@ -43,7 +52,8 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .field {display:block; margin-top:20px; width:100%; max-width:360px;}
 .field .title, .instructions {display:block; font-size:16px; margin-bottom:6px;}
 .field .instructions {margin-top:8px; font-size:14px; margin-bottom:0px; font-style:italic;}
-.field input, .field textarea {width:100%; padding:8px 10px; font-size:16px; line-height:18px; box-sizing:border-box;}
+.field input, .field textarea {width:100%; padding:8px 10px; font-size:16px; line-height:18px; box-sizing:border-box;
+	border: 1px solid #ccc;}
 .field.select input {margin-top:2px; padding:8px 0px;}
 .field.select .Select-control {border-radius:0px; height:38px;}
 .field.select .Select-placeholder {margin-top:2px;}
@@ -51,36 +61,85 @@ form .errorMessage {margin-top:20px; font-style:italic;}
 .field .imageThumbnail {display:inline-block; margin-top:15px; margin-right:15px; height:120px;}
 
 /* Heading */
-.heading {padding:30px; background:#f9f9f9;}
-.heading .profileHeading {text-align:center;}
-.heading .profileHeading img {max-height:120px; border-radius:9px; margin-bottom:20px;}
-.heading .editLinks {text-align:center; margin-top:20px;}
-.heading .editLinks a {display:inline-block; margin:0px 10px;}
+.heading {position:relative; padding:30px 0px;}
+.heading.campaign {padding:60px 0px;}
+.heading .bg {position:absolute; width:100%; height:100%; top:0px; left:0px; opacity:0.4;
+	background-size:100%; background-position: center center;}
+.heading .container {text-align:center;}
+.heading.update .container {text-align:left;}
+.heading.update button {margin:20px 20px 0px 0px;}
+.heading img {max-height:120px; border-radius:9px; margin-bottom:20px;}
+.heading .category {display:inline-block; border:1px solid #bbb; padding:4px 10px; font-size:14px; font-weight:bold;
+	text-transform:uppercase; border-radius:3px; margin:10px 10px 0px;}
+.heading button {margin:20px 10px 0px;}
+.heading .time {font-size:14px; color:#666;}
+.heading a:hover {color:#4e88c2;}
+
+/* Tab Section */
+.tabsection {padding-top:20px; white-space: nowrap; overflow-y:scroll;}
+.tabsection .react-tabs__tab-list {margin-bottom:0px !important;}
+.tabsection .react-tabs__tab {bottom:0px; border-radius: 5px 5px 0 0; margin-right:5px;}
+.tabsection .react-tabs__tab:hover {background:#ddd;}
+.tabsection .react-tabs__tab-list {border-bottom:0px;}
+.tabsection .react-tabs__tab--selected {border-color:transparent;}
+.tabsection .react-tabs__tab--selected:hover {background:white;}
 
 /* Item */
 .item {display:block; border:1px solid #ccc; line-height:1.5;}
+.item:hover {box-shadow:0px 0px 5px rgba(0,0,0,0.06);}
 .item img {float:left; height:150px; margin-right:20px;}
 .item .time {float:right; margin-left:30px; text-align:right; font-size:14px; color:#333;}
 .item .inside {padding:20px;}
 .item .inside .time {float:none; margin-left:0px; text-align:left; margin-bottom:6px;}
+.item a:hover {color:#4e88c2;}
 
 .item.post img {height:300px;}
 .item.post h3 {font-size:16px;}
-
 .item.donation {border:0px; border-bottom:1px solid #ddd; padding-bottom:15px;}
 .item.donation a {font-weight:bold;}
-.item.donation a:hover {color:blue}
+.item.post:hover, .item.donation:hover {box-shadow:none;}
 
 /* Search Form */
 .searchform {width:100%}
 .searchform .field {display:inline-block; width:48%; margin-right:3%; vertical-align:top;}
 .searchform .field.end {margin-right:0px;}
-.searchform .submit {display:block;}
+.searchform .submit {display:block; padding:6px 10px; font-size:14px; margin-top:12px;}
 
-button {border:0px; margin-top:20px; background:#333; color:white; padding:8px 16px; font-size:16px;}
+/* Button */
+button {border:0px; margin-top:20px; background:#333; color:white; padding:8px 16px; font-size:16px; cursor:pointer;}
+button:hover {background:#4e88c2;}
 button:active {transform: translateY(1px);}
+
+/* Gallery */
+.gallery img {display:inline-block; height:200px; margin-top:30px; margin-right:30px;}
 
 /* Mobile */
 @media screen and (max-width: 760px) {
-	.container {width:100%; padding:0px 20px;}
+	.container {width:100%; max-width:420px; padding:0px 20px;}
+	header #logo {position:relative; display:inline-block;}
+	header #mobile {position:absolute; display:block; right:20px; top:0px;}
+	header #mobile a {vertical-align:top;}
+	header #underlay {position:fixed; height:100%; width:100%; background:black; opacity:0.5; top:0px; left:0px;
+		display:none; z-index:50;}
+	header {z-index:75;}
+	header #control {position:absolute; width:100%; left:0px; top:100%; display:none; background:#99badd;
+		z-index:100; margin-left:0px !important; padding:20px;}
+	header .authmenu {display:block; float:none; text-align:left;}
+	header #control a {display:block; margin:0px; font-weight:bold; font-size:18px;}
+	header #control a:hover, header #control a.active {padding-bottom:12px; border:0px;}
+	header #open {display:inline-block;}
+	header #open:after {content:'\2630'; font-size:28px; font-weight:bold; color:white;}
+	header #control.show {display:block;}
+	header #underlay.show {display:block;}
+
+	.tabsection .container {max-width:100%;}
+
+	.field {margin-top:15px;}
+
+	.searchform .field {display:block; width:100%; margin-right:0px;}
+
+	.item img {float:none; width:100%; height:auto; margin-bottom:-5px;}
+	.item.post img {height:auto;}
+
+	.gallery img {display:block; width:100%; height:auto; margin-right:0px;}
 }
